--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.1.4",
     "react-intersection-observer": "^9.4.1",
+    "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
